# postcanvas

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  finalize-v101.yml  publish-pypi.yml  tests.yml  verify-github-release-v100.yml  verify-pypi-v031.yml  verify-pypi-v032.yml  verify-pypi-v100.yml
docs/: README.md  advanced-layout.md  api-reference.md  assisted-selection.md  backgrounds-images.md  carousels.md  concepts.md  config-reference.md  examples.md  gallery.md  getting-started.md  migration-1.0.md  output-cloud.md  platform-profiles.md  renderer-architecture.md  responsive-templates.md  rich-text-and-selectors.md  rich-text.md  shapes-effects.md  tables-charts.md  templates.md  typography.md  validation.md
examples/: 01_instagram_single.py  02_carousel.py  03_cloud_storage_example.py  04_instagram_table.py  05_instagram_charts.py  README.md  carousel_system.py  cloud_output.py  data_dashboard.py  editorial_poster.py  generate_carousel.py  generate_gallery.py  platform_pack.py  rich_text.py  story_launch.py  template_system.py  validation_report.py
postcanvas/: __init__.py  api.py  layout_flow.py  profile_extensions.py  rich_text.py  selectors.py  template.py  template_layout.py  template_schema.py  testing.py  text_extensions.py  validation.py  validation_extensions.py
postcanvas/models/: __init__.py  background.py  canvas.py  elements.py  enums.py  layout.py  meta.py  post.py  primitives.py  text.py  watermark.py
postcanvas/presets/: __init__.py  platforms.py
postcanvas/renderer/: __init__.py  background.py  canvas.py  charts.py  filters.py  fonts.py  gradient.py  images.py  loader.py  shapes.py  tables.py  text.py  utils.py
scripts/: check_docs.py
tests/: test_image_auto_focal.py  test_image_focal_point.py  test_layout_validation.py  test_platform_profiles.py  test_responsive_text.py  test_rich_text.py  test_template_advanced.py  test_templates.py  test_typography_i18n.py  test_validation_advanced.py  test_visual_regression.py
