[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postcanvas"
version = "0.3.2"
description = "Generate validated, responsive social media images from Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["social media", "instagram", "image generation", "pillow", "pydantic"]
dependencies = [
    "Pillow>=12.0",
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
typography = ["pyphen>=0.17"]
dev = [
    "build>=1.2",
    "pyphen>=0.17",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["postcanvas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
