[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postcanvas"
version = "1.0.1"
description = "Generate responsive, validated social graphics and reusable templates from Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
]
keywords = ["social media", "image generation", "responsive design", "templates", "pillow", "pydantic"]
dependencies = [
    "Pillow>=12.0",
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
typography = ["pyphen>=0.17"]
dev = [
    "build>=1.2",
    "pyphen>=0.17",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["postcanvas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
